[package]
name = "tokio-CN-doc"
version = "0.1.0"
authors = ["dengshenglong <dslchd@@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
mini-redis = "0.2"
bytes = "0.5"